# bids-sm-transformation-illustration-michael

./: .gitignore  README.md  hello.py  model_check.ipynb  problem_explainer_003245.ipynb  pyproject.toml  trans_hist_eg_000102_no_error.ipynb  transformation_history_example.ipynb  transformation_history_example_000102_no_error.ipynb  transformation_history_example_003245_no_ses_error.ipynb  transformation_history_example_00345.ipynb  transformation_history_example_00345_error.ipynb  transformation_history_example_ds002741_error.ipynb  transformation_history_example_ds003507_error.ipynb
data/ds003425_no_ses/dbcache/: layout_index.sqlite
data/ds003425_no_ses/sub-01/func/: sub-01_task-learning_run-01_events.tsv
ds003425_no_ses/: participants.tsv
model_specs/: ds002741_spec.json  ds003425_spec.json  ds003425_spec_no_deriv.json  ds003425_spec_no_ses.json  ds003507_spec.json  ds005_spec.json
