[project]
name = "bids-sm-transformation"
version = "0.1.0"
description = "Help visualizing bids sm transformations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=8.31.0",
    "matplotlib>=3.10.0",
    "nilearn>=0.11.1",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "pybids>=0.18.1",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
]
